<resources>
    <string name="app_name">INDODESS</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="loginTxt">Silakan login ke akun Anda</string>
    <string name="registerTxt">Tidak punya akun?</string>
    <string name="atau">atau</string>
    <string name="registerTxt2">Pendaftaran Akun</string>
    <string name="keteranganTxt">Silahkan isi data di bawah ini dengan informasi yang jujur dan akurat.</string>
    <string name="daftarBtn">Daftar</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>

    <string name="menu_home">Profil</string>
    <string name="menu_gallery">Market</string>
    <string name="menu_slideshow">Transaksi</string>
    <string name="menu_news">Berita</string>
    <string name="menu_policy">Kebijakan Privasi</string>
    <string name="indodess">INDODESS</string>
    <string name="inputEmail">Masukkan Email</string>
    <string name="reset">RESET</string>
    <string name="resetPassword">Lupa Password</string>
    <string name="txtViewSaldo">Jumlah saldo Anda:</string>
    <string name="nullSaldo">null</string>
    <string name="buy">buy</string>
    <string name="sell">sell</string>
    <string name="price">1 koin = Rp. 1000,00</string>
    <string name="jmlBuy">jumlah Beli</string>
</resources>