<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterUser">

    <TextView
        android:id="@+id/bannerRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerTxt2"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keteranganTxt"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/usernameReg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:inputType="text"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/emailReg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/passwordReg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/registerUser"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/daftarBtn"

        />

</LinearLayout>