<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.matius.indodess.MainActivity">

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginTxt"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="8pt"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/txt_login">

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:autofillHints="@string/username"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:autofillHints="@string/password"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/btn_login"
            style="?android:textAppearanceSmall"
            android:textAllCaps="false"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_blue_light"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_atau"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/atau"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textSize="8pt"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_register"
            style="?android:textAppearanceSmall"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:text="@string/registerTxt"/>

    </LinearLayout>

</RelativeLayout>