<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.matius.indodess.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indodess"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputEmail"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:inputType="text"
        android:layout_marginTop="20dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/reset"
        style="?android:textAppearanceSmall"
        android:textAllCaps="false"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

</LinearLayout>